[gd_scene load_steps=44 format=3 uid="uid://crxk4sjgn3glw"]

[ext_resource type="Script" path="res://Gameplay Scenes/testing.gd" id="1_ofgqn"]
[ext_resource type="Texture2D" uid="uid://bd6sav1sa26m" path="res://Assets/basic_tileset_and_assets_standard/terrain_tiles_v2.png" id="2_dhnxw"]
[ext_resource type="Texture2D" uid="uid://cj8ivpf3e30re" path="res://Assets/Green_Tile.png" id="2_kmmka"]
[ext_resource type="Texture2D" uid="uid://vadgd1lyvnhr" path="res://Assets/Brown_Tile.png" id="3_pgcty"]
[ext_resource type="Script" path="res://Gameplay Scenes/MainGrid.gd" id="4_12y7e"]
[ext_resource type="Texture2D" uid="uid://dq7s8vpq8ecug" path="res://Assets/Archer_Blue_Icon.png" id="5_sq067"]
[ext_resource type="Script" path="res://Gameplay Scenes/SpawingAlgorithm.gd" id="5_xfpsw"]
[ext_resource type="Texture2D" uid="uid://5abx618tti48" path="res://Assets/Archer_Blue_Icon_pressed.png" id="6_376fs"]
[ext_resource type="Script" path="res://Gameplay Scenes/PauseMenu.gd" id="6_bn34x"]
[ext_resource type="Texture2D" uid="uid://ccfa6p6tij3h1" path="res://Assets/Archer_Blue_Icon_hover.png" id="6_buewv"]
[ext_resource type="Texture2D" uid="uid://71judsvvva8q" path="res://Assets/GoldMine_Icon.png" id="6_o067g"]
[ext_resource type="Texture2D" uid="uid://bkykkuwx7obbq" path="res://Assets/fence_tiles_icon.png" id="7_a2dux"]
[ext_resource type="Texture2D" uid="uid://ryjqnx0fvu4c" path="res://Assets/Title.png" id="7_h83h8"]
[ext_resource type="Texture2D" uid="uid://gr3svguljbxg" path="res://Assets/Barrel_Red_icon.png" id="8_gr7rw"]
[ext_resource type="Texture2D" uid="uid://c346acmcbmoxe" path="res://Assets/GoldMine_Icon_pressed.png" id="9_yt1e3"]
[ext_resource type="Texture2D" uid="uid://d06e5maf5a8fj" path="res://Assets/GoldMine_Icon_hover.png" id="10_n4hyc"]
[ext_resource type="Texture2D" uid="uid://451qjmc0j0yj" path="res://Assets/fence_tiles_icon_pressed.png" id="12_85wjg"]
[ext_resource type="Texture2D" uid="uid://mh7iv5g5gnxw" path="res://Assets/fence_tiles_icon_hover.png" id="13_unl2u"]
[ext_resource type="Texture2D" uid="uid://de3t1myltwo7m" path="res://Assets/Barrel_Red_icon_pressed.png" id="15_7bt0j"]
[ext_resource type="Texture2D" uid="uid://brakjsv1vppj4" path="res://Assets/Barrel_Red_icon_hover.png" id="16_5w3d6"]
[ext_resource type="Texture2D" uid="uid://c23unpbjef81b" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualWhite/UI_IconsWhiteIndividual_g685.png" id="18_wo4vb"]
[ext_resource type="Texture2D" uid="uid://bsn4aetd4bjuq" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualDark/UI_IconsDarkIndividual_g685.png" id="19_2tppn"]
[ext_resource type="Texture2D" uid="uid://dqdflkqs1hd63" path="res://Assets/ExportedIcons/Icon_Play.png" id="20_gugrg"]
[ext_resource type="Script" path="res://Gameplay Scenes/VictoryScreen.gd" id="21_8x51s"]
[ext_resource type="Texture2D" uid="uid://sgoghr30xb3l" path="res://Assets/ExportedIcons/Icon_Skull.png" id="21_65rvl"]
[ext_resource type="Texture2D" uid="uid://bgw8p0410pf4y" path="res://Assets/ExportedIcons/Item4.png" id="21_n135f"]
[ext_resource type="Texture2D" uid="uid://32xld85ogaef" path="res://Assets/ExportedIcons/Icon_Home.png" id="22_oaq87"]
[ext_resource type="Texture2D" uid="uid://bxrjt1t6o027j" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualWhite/UI_IconsWhiteIndividual_g683.png" id="23_j6xc6"]
[ext_resource type="Texture2D" uid="uid://bvir4r0a5c1pf" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualDark/UI_IconsDarkIndividual_g683.png" id="24_nqfbw"]
[ext_resource type="Script" path="res://Gameplay Scenes/LossScreen.gd" id="30_1joor"]
[ext_resource type="Texture2D" uid="uid://devrdgr3j6rho" path="res://Assets/ExportedIcons/Item3.png" id="30_gndb5"]
[ext_resource type="Texture2D" uid="uid://dnt5cps2ewv2a" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualWhite/UI_IconsWhiteIndividual_g778.png" id="31_qex53"]
[ext_resource type="Texture2D" uid="uid://3njpee8qpkg5" path="res://Assets/UI_Icons_By_VerzatileDev/Individual/Uicons_IndividualDark/UI_IconsDarkIndividual_g778.png" id="32_xd2b2"]
[ext_resource type="Texture2D" uid="uid://ca4f0q5f4p77d" path="res://Assets/ExportedIcons/Icon_Trash.png" id="34_m42fb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pw7mh"]
texture = ExtResource("2_dhnxw")
texture_region_size = Vector2i(108, 108)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ymea"]
texture = ExtResource("2_kmmka")
texture_region_size = Vector2i(108, 108)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vogbq"]
texture = ExtResource("3_pgcty")
texture_region_size = Vector2i(108, 108)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_pe342"]
tile_size = Vector2i(108, 108)
sources/1 = SubResource("TileSetAtlasSource_0ymea")
sources/2 = SubResource("TileSetAtlasSource_vogbq")
sources/0 = SubResource("TileSetAtlasSource_pw7mh")

[sub_resource type="Curve2D" id="Curve2D_n0c6g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1056, 54, 0, 0, 0, 0, 0, 54)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_a8ccb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1056, 162, 0, 0, 0, 0, 0, 162)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0hthd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1056, 270, 0, 0, 0, 0, 0, 270)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_iqxjh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1056, 378, 0, 0, 0, 0, 0, 378)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_c74w4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1056, 486, 0, 0, 0, 0, 0, 486)
}
point_count = 2

[node name="BasicLevel" type="Node2D"]
script = ExtResource("1_ofgqn")

[node name="MainGrid" type="TileMap" parent="."]
light_mask = 2
visibility_layer = 2
tile_set = SubResource("TileSet_pe342")
format = 2
layer_0/tile_data = PackedInt32Array(65536, 2, 0, 65537, 1, 0, 65538, 2, 0, 65539, 1, 0, 65541, 1, 0, 65542, 2, 0, 65543, 1, 0, 131079, 2, 0, 196615, 1, 0, 262151, 2, 0, 262144, 1, 0, 196608, 2, 0, 131072, 1, 0, 131073, 2, 0, 196610, 2, 0, 262147, 2, 0, 196609, 1, 0, 262145, 2, 0, 131074, 1, 0, 262146, 1, 0, 131075, 2, 0, 196611, 1, 0, 131076, 1, 0, 196612, 2, 0, 262148, 1, 0, 131077, 2, 0, 196613, 1, 0, 262149, 2, 0, 131078, 1, 0, 196614, 2, 0, 262150, 1, 0, 262152, 1, 0, 131080, 1, 0, 196616, 2, 0, 65544, 2, 0, 2, 1, 0, 6, 1, 0, 8, 1, 0, 1, 2, 0, 5, 2, 0, 7, 2, 0, 65540, 2, 0, 3, 2, 0, 4, 1, 0, 0, 1, 0)
script = ExtResource("4_12y7e")

[node name="Camera2D" type="Camera2D" parent="MainGrid"]
position = Vector2(-164, -92)
anchor_mode = 0

[node name="Towers" type="Node2D" parent="MainGrid"]

[node name="PassiveIncomeTimer" type="Timer" parent="MainGrid"]
wait_time = 5.0
autostart = true

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -3.0
offset_top = -83.0
offset_right = 855.0

[node name="Towers" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="Basic_Shooter_button" type="TextureButton" parent="PanelContainer/Towers"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 83.0
toggle_mode = true
texture_normal = ExtResource("5_sq067")
texture_pressed = ExtResource("6_376fs")
texture_hover = ExtResource("6_buewv")
ignore_texture_size = true
stretch_mode = 0

[node name="Basic_Shooter_Recharge" type="ProgressBar" parent="PanelContainer/Towers/Basic_Shooter_button"]
layout_mode = 0
offset_left = 3.0
offset_top = 51.0
offset_right = 109.0
offset_bottom = 80.0
show_percentage = false

[node name="Resource_Cost" type="Label" parent="PanelContainer/Towers/Basic_Shooter_button"]
layout_mode = 0
offset_left = 35.0
offset_top = 55.0
offset_right = 75.0
offset_bottom = 78.0
text = "100
"
horizontal_alignment = 1

[node name="Resource_Generator_button" type="TextureButton" parent="PanelContainer/Towers"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource("6_o067g")
texture_pressed = ExtResource("9_yt1e3")
texture_hover = ExtResource("10_n4hyc")
ignore_texture_size = true
stretch_mode = 0

[node name="Resource_Generator_Recharge" type="ProgressBar" parent="PanelContainer/Towers/Resource_Generator_button"]
layout_mode = 0
offset_left = 2.0
offset_top = 54.0
offset_right = 102.0
offset_bottom = 76.0
show_percentage = false

[node name="Resource_Cost" type="Label" parent="PanelContainer/Towers/Resource_Generator_button"]
layout_mode = 0
offset_left = 37.0
offset_top = 53.0
offset_right = 72.0
offset_bottom = 76.0
text = "50"
horizontal_alignment = 1

[node name="Wall_button" type="TextureButton" parent="PanelContainer/Towers"]
layout_mode = 0
offset_left = 200.0
offset_right = 300.0
offset_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource("7_a2dux")
texture_pressed = ExtResource("12_85wjg")
texture_hover = ExtResource("13_unl2u")
ignore_texture_size = true
stretch_mode = 0

[node name="Wall_Recharge" type="ProgressBar" parent="PanelContainer/Towers/Wall_button"]
layout_mode = 0
offset_top = 46.0
offset_right = 99.0
offset_bottom = 73.0
show_percentage = false

[node name="Resource_Cost" type="Label" parent="PanelContainer/Towers/Wall_button"]
layout_mode = 0
offset_left = 25.0
offset_top = 47.0
offset_right = 65.0
offset_bottom = 70.0
text = "50"
horizontal_alignment = 1

[node name="Mine_button" type="TextureButton" parent="PanelContainer/Towers"]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource("8_gr7rw")
texture_pressed = ExtResource("15_7bt0j")
texture_hover = ExtResource("16_5w3d6")
ignore_texture_size = true
stretch_mode = 0

[node name="Mine_Recharge" type="ProgressBar" parent="PanelContainer/Towers/Mine_button"]
layout_mode = 0
offset_left = 4.0
offset_top = 49.0
offset_right = 102.0
offset_bottom = 76.0
show_percentage = false

[node name="Resource_Cost" type="Label" parent="PanelContainer/Towers/Mine_button"]
layout_mode = 0
offset_left = 35.0
offset_top = 49.0
offset_right = 75.0
offset_bottom = 72.0
text = "25"
horizontal_alignment = 1

[node name="RemoveButton" type="TextureButton" parent="."]
offset_left = 764.0
offset_top = -90.0
offset_right = 851.0
offset_bottom = -4.0
texture_normal = ExtResource("34_m42fb")
ignore_texture_size = true
stretch_mode = 0

[node name="Lane1path" type="Path2D" parent="."]
curve = SubResource("Curve2D_n0c6g")

[node name="Lane2path" type="Path2D" parent="."]
curve = SubResource("Curve2D_a8ccb")

[node name="Lane3path" type="Path2D" parent="."]
curve = SubResource("Curve2D_0hthd")

[node name="Lane4path" type="Path2D" parent="."]
curve = SubResource("Curve2D_iqxjh")

[node name="Lane5path" type="Path2D" parent="."]
curve = SubResource("Curve2D_c74w4")

[node name="ResourceCount" type="Label" parent="."]
offset_left = -164.0
offset_top = -85.0
offset_right = -7.0
offset_bottom = -2.0

[node name="SpawingAlgorithm" type="Node" parent="."]
script = ExtResource("5_xfpsw")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 857.0
offset_top = -87.0
offset_right = 974.0
offset_bottom = -2.0
texture_normal = ExtResource("18_wo4vb")
texture_pressed = ExtResource("19_2tppn")
ignore_texture_size = true
stretch_mode = 0

[node name="VictoryScreen" type="Node2D" parent="."]
visible = false
script = ExtResource("21_8x51s")

[node name="TextureRect" type="TextureRect" parent="VictoryScreen"]
offset_left = 125.0
offset_top = 99.0
offset_right = 765.0
offset_bottom = 370.0
texture = ExtResource("21_n135f")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VictoryScreen/TextureRect"]
layout_mode = 0
offset_left = 177.0
offset_top = 54.0
offset_right = 462.0
offset_bottom = 131.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 37
text = "Level Complete!"

[node name="NextLevel" type="TextureButton" parent="VictoryScreen"]
offset_left = 339.0
offset_top = 324.0
offset_right = 614.0
offset_bottom = 508.0
texture_normal = ExtResource("23_j6xc6")
texture_pressed = ExtResource("24_nqfbw")

[node name="PauseMenu" type="Node2D" parent="."]
process_mode = 2
visible = false
script = ExtResource("6_bn34x")

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
offset_top = -88.0
offset_right = 976.0
offset_bottom = 564.0
texture = ExtResource("7_h83h8")

[node name="Resume" type="TextureButton" parent="PauseMenu/TextureRect"]
layout_mode = 0
offset_left = 184.0
offset_top = 332.0
offset_right = 377.0
offset_bottom = 481.0
texture_normal = ExtResource("20_gugrg")
texture_pressed = ExtResource("21_65rvl")

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/TextureRect"]
layout_mode = 0
offset_left = 200.0
offset_top = 269.0
offset_right = 365.0
offset_bottom = 329.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Resume"

[node name="RichTextLabel2" type="RichTextLabel" parent="PauseMenu/TextureRect"]
layout_mode = 0
offset_left = 464.0
offset_top = 268.0
offset_right = 789.0
offset_bottom = 340.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Return to Title Screen"

[node name="ExitToMenu" type="TextureButton" parent="PauseMenu/TextureRect"]
layout_mode = 0
offset_left = 507.0
offset_top = 317.0
offset_right = 708.0
offset_bottom = 536.0
texture_normal = ExtResource("22_oaq87")

[node name="LossScreen" type="Node2D" parent="."]
visible = false
script = ExtResource("30_1joor")

[node name="TextureRect" type="TextureRect" parent="LossScreen"]
offset_left = 181.0
offset_top = 40.0
offset_right = 667.0
offset_bottom = 318.0
texture = ExtResource("30_gndb5")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="LossScreen/TextureRect"]
layout_mode = 0
offset_left = 94.0
offset_top = 45.0
offset_right = 401.0
offset_bottom = 153.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "You Lose!"

[node name="Retry" type="TextureButton" parent="LossScreen"]
offset_left = 308.0
offset_top = 323.0
offset_right = 530.0
offset_bottom = 529.0
texture_normal = ExtResource("31_qex53")
texture_pressed = ExtResource("32_xd2b2")

[connection signal="end_level" from="." to="VictoryScreen" method="_on_basic_level_end_level"]
[connection signal="lose_level" from="." to="LossScreen" method="_on_basic_level_lose_level"]
[connection signal="child_exiting_tree" from="MainGrid/Towers" to="MainGrid" method="_on_towers_child_exiting_tree"]
[connection signal="timeout" from="MainGrid/PassiveIncomeTimer" to="MainGrid" method="_on_passive_income_timer_timeout"]
[connection signal="pressed" from="PanelContainer/Towers/Basic_Shooter_button" to="MainGrid" method="_on_tower_button_pressed"]
[connection signal="pressed" from="PanelContainer/Towers/Resource_Generator_button" to="MainGrid" method="_on_resource_producer_button_pressed"]
[connection signal="pressed" from="PanelContainer/Towers/Wall_button" to="MainGrid" method="_on_wall_button_pressed"]
[connection signal="pressed" from="PanelContainer/Towers/Mine_button" to="MainGrid" method="_on_mine_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="MainGrid" method="_on_remove_button_pressed"]
[connection signal="last_wave" from="SpawingAlgorithm" to="." method="_on_spawing_algorithm_last_wave"]
[connection signal="spawn_new_wave" from="SpawingAlgorithm" to="." method="_on_spawing_algorithm_spawn_new_wave"]
[connection signal="pressed" from="PauseButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseButton" to="PauseMenu" method="_on_pause_button_pressed"]
[connection signal="pressed" from="VictoryScreen/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="PauseMenu/TextureRect/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/TextureRect/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/TextureRect/ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="LossScreen/Retry" to="." method="_on_retry_pressed"]
